--- a/favorites/style.css
+++ b/favorites/style.css
@@ -7,7 +7,7 @@
 #2b303b - Dark Gray
 #737b8c - medium-Gray
 #e4e4e7 - Light Gray
-#ef4444 - Red
+#ff0000 - Red
  */
 
 * {
@@ -106,6 +106,70 @@ section {
   text-decoration: underline;
 }
 
+#favorites-section {
+  max-width: 1400px;
+  margin: 0 auto;
+  padding: 64px 16px 32px;
+  display: grid;
+  grid-template-columns: repeat(3, auto);
+  gap: 32px;
+}
+
+.palette-container {
+  height: 170px;
+  border-radius: 12px;
+  border: 1px solid #e4e4e7;
+  overflow: hidden;
+  display: flex;
+  justify-content: space-between;
+}
+
+.palette-color {
+  height: 100%;
+  flex-basis: 100%;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 14px;
+  font-weight: bold;
+  letter-spacing: 1px;
+  transition: all 0.15s ease;
+}
+
+.palette-color:hover {
+  flex-basis: 260%;
+}
+
+.palette-tools {
+  padding: 6px 0 0;
+  display: flex;
+  gap: 12px;
+  justify-content: center;
+}
+
+.palette-tools i {
+  font-size: 18px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 6px 15px;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.palette-tools i:hover {
+  background-color: rgba(0, 0, 0, 0.15);
+}
+
+.palette-tools i.fa-pen-to-square:hover {
+  color: #8b5cf6;
+}
+
+.palette-tools i.fa-trash:hover {
+  color: #ff0000;
+}
+
 #toast {
   width: 354px;
   height: 52px;
@@ -150,6 +214,12 @@ section {
   opacity: 0;
 }
 
+@media (max-width: 992px) {
+  #favorites-section {
+    grid-template-columns: repeat(2, auto);
+  }
+}
+
 @media (max-width: 768px) {
   header {
     height: 128px;
@@ -182,6 +252,15 @@ section {
   #empty-palette p {
     font-size: 36px;
     line-height: 1.5;
+  }
+
+  #favorites-section {
+    max-width: 95%;
+    grid-template-columns: auto;
+  }
+
+  .palette-container {
+    height: 270px;
   }
 
   #toast {
