--- a/favorites/style.css
+++ b/favorites/style.css
@@ -323,6 +323,10 @@ section {
     font-size: 16px;
   }
 
+  #empty-palette p {
+    font-size: 16px;
+  }
+
   #favorite-palettes {
     grid-template-columns: 1fr;
   }
