--- a/favorites/style.css
+++ b/favorites/style.css
@@ -191,12 +191,22 @@ section {
   color: #ff0000;
 }
 
-#toast {
-  width: 354px;
-  height: 52px;
+.toastBox {
+  width: 386px;
+  max-height: 312px;
+  padding: 16px;
+  overflow: hidden;
   position: fixed;
-  bottom: 34px;
-  right: 34px;
+  bottom: 18px;
+  right: 18px;
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+}
+
+#toast {
+  width: 100%;
+  height: 52px;
   background-color: #ffffff;
   color: #2b303b;
   font-weight: 600;
@@ -204,10 +214,18 @@ section {
   border-radius: 8px;
   border: 1px solid #e4e4e7;
   box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.15);
+  transform: translateY(50px);
+  animation: moveToast 0.5s ease forwards;
   display: flex;
   align-items: center;
   justify-content: start;
   transition: all 1s ease;
+}
+
+@keyframes moveToast {
+  100% {
+    transform: translateY(0);
+  }
 }
 
 .toast-icon {
@@ -231,7 +249,6 @@ section {
 }
 
 .close {
-  transform: translateY(50px);
   opacity: 0;
 }
 
@@ -280,12 +297,12 @@ section {
     font-size: 22px;
   }
 
-  #toast {
-    top: 108px;
-    left: calc(50vw - 177px);
+  .toastBox {
+    top: 100px;
+    left: calc(50% - 193px);
   }
 
-  .close {
+  #toast {
     transform: translateY(-50px);
   }
 }
@@ -333,16 +350,5 @@ section {
 
   .palette-color {
     font-size: 14px;
-  }
-
-  #toast {
-    width: 280px;
-    height: 42px;
-    top: 84px;
-    left: calc(50vw - 140px);
-  }
-
-  .close {
-    transform: translateY(-50px);
   }
 }
